fixed inconsistancy in <ul> spacing between browsers.

--- a/public/stylesheets/my9s.css
+++ b/public/stylesheets/my9s.css
@@ -84,6 +84,7 @@
 
 .outline_tree {
 	padding-left: 0px;
+	margin-left:0px;
 }
 
 .unselected_page {
